# extending_factor_model

./: README.md  pyproject.toml
extending_factor_model/: backtester.py  plots.py
extending_factor_model/data_loader/: load_data.py
extending_factor_model/markowitz/: backtester.py  portfolio_optimizer.py
extending_factor_model/risk_models/: compute_risk_model_from_factor_returns.py  compute_risk_model_statistical.py
notebooks/: betas_and_alphas.py  factor_portfolio.py  get_covs.py  get_russell_data.py  load_data.py  market_backtest.py  r_squared.py
scripts/: shell_snippet.sh
